# ai110-module3show-musicrecommendersimulation-starter

./: AGENTS.md  CHANGELOG.md  README.md  ai_interactions.md  model_card.md  pyproject.toml  reflection.md  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature.yml
.github/workflows/: quality.yml  test.yml
.trunk/: trunk.yaml
.trunk/configs/: .markdownlint.yaml  ruff.toml
data/: songs.csv
docs/: core-rubric-audit.md  data-provenance.md  final-rubric-audit.md  project-board.md
docs/decisions/: 0001-delivery-governance.md  0002-use-uv-and-export-a-pip-fallback.md  0003-use-a-small-non-overlapping-trunk-check-set.md  0004-use-a-verifiable-classroom-catalog.md  0005-use-strategy-objects-for-ranking-modes.md
docs/qrs/: 01-questions.md  02-research.md  03-design.md  04-structure.md
src/: __init__.py  main.py  recommender.py
tests/: conftest.py  test_profile_bdd.py  test_recommender.py
tests/features/: profile_recommendations.feature
tests/fixtures/: malformed_songs.csv
